--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,15 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/ma_portrait_fragments_container">
+        android:layout_height="wrap_content"
+        android:id="@+id/ma_portrait_acf_and_dcf_container">
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ma_portrait_clf_container">
     </FrameLayout>
 
 </LinearLayout>
