--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -5,10 +5,12 @@
     android:orientation="vertical"
     tools:context="com.example.pk.contacts.fragments.ContactListFragment">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/clf_list_view"
-        android:layout_margin="@dimen/clf_list_view_margin">
-    </ListView>
+        android:id="@+id/clf_recycler_view"
+        android:layout_margin="@dimen/clf_list_view_margin"
+        android:scrollbars="vertical"
+        tools:listitem="@layout/recycler_view_item">
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
